[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "specie"
version = "0.5.0"
description = "Counter-Threat-Finance Attribution & Fusion Platform (Specie)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cognis Digital LLC" }]
keywords = [
    "counter-threat-finance", "blockchain-analytics", "osint", "stix",
    "deanonymization", "sanctions", "threat-intelligence", "cognis",
]
license = { text = "COCL-1.0" }
dependencies = []

[project.urls]
Homepage = "https://cognis.digital"

[project.scripts]
specie = "specie.cli:main"

[tool.setuptools]
packages = ["specie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
